add view all hotels

--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
     "build": "next build",
     "start": "next start",
     "test": "jest --watch",
-    "test:ci": "jest --ci"
+    "test:ci": "jest --ci",
+    "coverage": "jest --coverage"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
+    "@tanstack/react-query": "^4.22.0",
     "next": "latest",
+    "next-router-mock": "^0.8.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   },
